<resources>
    <string name="app_name">E02</string>
    <string name="msg">ABCDEF</string>
    <string name="bt_center">Center</string>
    <string name="bt_left">Left</string>
    <string name="bt_right">Right</string>
    <string name="inputtext_1">0</string>
    <string name="inputtext_2">0</string>
    <string name="inputtext_3">0</string>
    <string name="bttop_name">Change</string>
    <string name="bttop_name1">Random_Change</string>
    <string name="add">+5</string>
    <string name="less">-5</string>
</resources>
